<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_single_effects"
        app:layout_constraintBottom_toTopOf="@+id/button_input"
        app:layout_constraintEnd_toEndOf="@+id/button_input"
        app:layout_constraintStart_toStartOf="@+id/button_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_input_effects"
        app:layout_constraintBottom_toTopOf="@+id/button_chain"
        app:layout_constraintEnd_toEndOf="@+id/button_chain"
        app:layout_constraintStart_toStartOf="@+id/button_chain"
        app:layout_constraintTop_toBottomOf="@+id/button_single" />

    <Button
        android:id="@+id/button_chain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_chain_effects"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_input" />
</androidx.constraintlayout.widget.ConstraintLayout>